Implement proper 'Redirect' functionality

kmail-mobile uses the redirect dialog from mailcommon/ now and
doesn't open the message composer instead when redirecting a mail.

BUG: 261052